@@ -13,10 +13,12 @@ Chicago Tribune (chicagotribune.com)\
 Corriere Della Sera (corriere.it)\
 Daily Press (dailypress.com)\
 Dagens Nyheter (dn.se)\
+Denver Post (denverpost.com)\
 The Economist (economist.com)\
 Financial Times (ft.com)\
 Glassdoor (glassdoor.com)\
 Haaretz (haaretz.co.il / haaretz.com)\
+Hacked (hacked.com)\
 Hartford Courant (courant.com)\
 Harvard Business Review (hbr.org)\
 Het Financieele Dagblad (fd.nl)\
@@ -49,4 +51,5 @@ Wired (wired.com)
 
 ### Troubleshooting
 
-If WSJ stops working try removing all wsj.com site cookies.
+If WSJ stops working try removing all wsj.com site cookies.\
+For The Denver Post turn off uBlock.
