@@ -43,5 +43,5 @@
 		"webRequest",
 		"webRequestBlocking"
 	],
-	"version": "1.2.10"
+	"version": "1.3.0"
 }
