@@ -8,11 +8,13 @@ var defaultSites = {
   'Corriere Della Sera': 'corriere.it',
   'Daily Press': 'dailypress.com',
   'Dagens Nyheter': 'dn.se',
+  'Denver Post': 'denverpost.com',
   'The Economist': 'economist.com',
   'Financial Times': 'ft.com',
   'Glassdoor': 'glassdoor.com',
   'Haaretz': 'haaretz.co.il',
   'Haaretz English': 'haaretz.com',
+  'Hacked': 'hacked.com',
   'Hartford Courant': 'courant.com',
   'Harvard Business Review': 'hbr.org',
   'Het Financieele Dagblad': 'fd.nl',
