@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div style="width:220px;">Bypass Paywalls v1.2.10 by Adam
+<div style="width:220px;">Bypass Paywalls v1.3.0 by Adam
 <a href="options.html">Options</a></div>
 </body>
 </html>
