@@ -1,5 +1,6 @@
 Updates--
 
+2018-07-04 v1.3.0: Added The Denver Post (denverpost.com, note: need to turn off uBlock for this site), added Hacked (hacked.com)
 2018-06-20 v1.2.10: Added The Business Journals (bizjournals.com)
 2018-06-27 v1.2.9: Fixed The Washington Post (washingtonpost.com)
 2018-06-22 v1.2.8: Added Vanity Fair (vanityfair.com), added The Globe and Mail (theglobeandmail.com)
